routes/working-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: working
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      sectionName: http
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      # - type: URLRewrite
      #   urlRewrite:
      #     path:
      #       type: ReplacePrefixMatch
      #       replacePrefixMatch: /
      backendRefs: 
      - group: gloo.solo.io
        kind: Upstream
        name: working
        namespace: gloo-system
      # - name: httpbin
      #   namespace: httpbin
      #   port: 8000
